# spk-generator-cmm

./: README.md  SPK.bat  app.py  constants.py  create_data_from_csv.py  event_listeners.py  generate_dummy_data.py  part.py  proc.ipynb  pyproject.toml  spk_templater.py  task_prioritization.py  utils.py
data/: MRP CMM - RM.csv  actspk.pickle  data_material.csv  data_part.csv  dummy_parts.pickle  example.xlsx  fake_actspk.pickle  fake_mtlin.pickle  fake_rekapdo.pickle  material.json  mtlin.pickle  parts.pickle  rekapdo.pickle
outputs/: stok.xlsx
