[tool.poetry]
name = "dss"
version = "0.1.0"
description = ""
authors = ["rifoag <rifoagenadi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
gradio = "^4.36.1"
faker = "^25.8.0"
pymssql = "^2.3.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
